# tkstat

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.agents/skills/writing-commit-messages/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: pricing-architecture.md  pricing-catalog.md
pricing/: catalog.json
scripts/: db_inspect.sh  dev_check.sh  e2e_smoke.sh  fixture_smoke.sh  pricing_check.sh  release_check.sh  script_smoke.sh  update_pricing_catalog.py
src/: budget.rs  cli.rs  config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  timing.rs
src/db/: cost.rs  ingest.rs  local_time.rs  mod.rs  pricing.rs  pricing_fetch.rs  pricing_validation.rs  query.rs  schema.rs
src/db/pricing/: tests.rs
src/db/query/: tests.rs
src/domain/: mod.rs  period.rs  pricing.rs  provider.rs  timestamp.rs  usage.rs
src/ingest/: claude.rs  codex.rs  jsonl.rs  mod.rs  parser.rs  walker.rs
src/render/: braille.rs  budget.rs  chart.rs  columns.rs  cost_explain.rs  csv.rs  doctor.rs  heatmap.rs  json.rs  mod.rs  oneline.rs  pricing_audit.rs  summary.rs  table.rs
tests/: README.md  cli_e2e.rs  e2e_component_integrity.rs  e2e_fixtures.rs  e2e_output_modes.rs  e2e_pricing.rs  e2e_provider_diagnostics.rs  e2e_setup_smoke.rs
tests/fixtures/claude/api/: api.jsonl
tests/fixtures/claude/demo/: main.jsonl
tests/fixtures/claude/demo/subagents/: agent.jsonl
tests/fixtures/codex/: synthetic-codex-session.jsonl
tests/fixtures/pricing/: anthropic_pricing.html  openai_pricing.json
tests/support/: mod.rs
