[package]
name = "tkstat"
version = "0.4.0"
edition = "2024"
description = "vnstat-style monitor for Claude Code token usage"
license = "MIT"

[features]
default = ["network-pricing"]
network-pricing = ["dep:ureq"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
memchr = "2"
owo-colors = "4"
iana-time-zone = "0.1"
rusqlite = { version = "0.39", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textplots = "0.8"
walkdir = "2"
ureq = { version = "2.12", optional = true, default-features = false, features = ["tls"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
