[package]
name = "tkstat"
version = "0.4.2"
edition = "2024"
rust-version = "1.88"
description = "vnstat-style monitor for Claude Code and Codex token usage"
license = "MIT"
repository = "https://github.com/burritothief/tkstat"
homepage = "https://github.com/burritothief/tkstat"
readme = "README.md"
keywords = ["tokens", "cli", "claude", "codex", "usage"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["network-pricing"]
network-pricing = ["dep:ureq"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
memchr = "2.8.3"
owo-colors = "4.3.0"
iana-time-zone = "0.1.65"
rusqlite = { version = "0.39.0", features = ["bundled", "functions"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
textplots = "0.8.7"
walkdir = "2.5.0"
ureq = { version = "3.3.0", optional = true, default-features = false, features = ["rustls"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
